[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interface/Assets/Themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Interface/UI/Transitions/Fade.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface/HUD/HUD.gd" type="Script" id=3]
[ext_resource path="res://Interface/HUD/PausedOverlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/HUD/GameoverOverlay.tscn" type="PackedScene" id=5]

[node name="HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0
size_flags_vertical = 3

[node name="InfoLabels" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1680.0
margin_bottom = 920.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="LevelLabel" type="Label" parent="HBoxContainer/InfoLabels"]
margin_top = 798.0
margin_right = 1680.0
margin_bottom = 857.0
text = "Level: 1"
align = 2
valign = 1

[node name="TimeLabel" type="Label" parent="HBoxContainer/InfoLabels"]
margin_top = 861.0
margin_right = 1680.0
margin_bottom = 920.0
text = "00:00"
align = 2
valign = 1

[node name="Fade" parent="." instance=ExtResource( 2 )]
visible = false
color = Color( 0, 0, 0, 1 )

[node name="PausedOverlay" parent="." instance=ExtResource( 4 )]

[node name="GameoverOverlay" parent="." instance=ExtResource( 5 )]
visible = false
